--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,3 +22,6 @@ jobs:
 
       - name: Test webpages
         run: python3 tests/test_basic.py
+      
+      - name: Test User Forms 
+        run: python3 tests/test_users.py 
